--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,21 +6,364 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import 'shop';
 
 .computers {
     margin-top: 50px;
 }
 
 .computer {
-    margin-bottom: 50px;
+    width: 100%;
+    padding: 7px;
 }
 
-.card-bottom {
+.computer-card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-clip: border-box;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    cursor: pointer;
+
+    .computer-title {
+        font-size: 18px;
+    }
+}
+
+.computer-card-body {
+    padding-top: 0.5rem;
+    .computer-buttons {
+        float: right;
+    }
+}
+
+.part-picker {
+    padding-top: 1.5rem;
+
+    .part {
+        padding-top: 0.5rem;
+
+        .part-header {
+            width: 100%;
+            background-color: white;
+            border: solid rgba(0, 0, 0, 0.125);
+            border-width: 1px 1px 0 1px;
+            border-radius: 0.25rem 0.25rem;
+            display: flex;
+            justify-content: space-between;
+            padding: 0.5rem;
+
+            span {
+                margin-top: auto;
+                margin-bottom: auto;
+                color: black;
+                font-size: 1.25rem;
+            }
+        }
+
+        .part-row {
+            width: 100%;
+            background-color: white;
+            border: solid rgba(0, 0, 0, 0.125);
+            border-width: 0 1px 1px 1px;
+            border-radius: 0 0 0.25rem 0.25rem;
+            display: flex;
+            justify-content: space-between;
+            padding: 0.5rem;
+            margin: 0 0.50rem 0 -0.25rem;
+        }
+    }
+}
+
+.form-check {
+    padding: 0;
+}
+
+.item-name {
+    color: #4a5568;
+}
+
+.computer-stat-column {
+    color: white;
+    padding: 8px;
+    cursor: default;
+
+    .computer-stat {
+        padding: 10px 0;
+        margin-bottom: 10px;
+        border-bottom: solid black 1px;
+
+        h3 {
+            margin-bottom: 0;
+        }
+    }
+
+    &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 3%;
+        height: 94%;
+        border-left: solid black 1px;
+    }
+}
+
+.part-img {
+    width: 10%;
+}
+
+.computer-table {
+
+    tr {
+        cursor: pointer;
+    }
+
+    td {
+        vertical-align: middle;
+    }
+}
+
+div[data-rarity="common"] {
+    background: radial-gradient(#9B9D9B, #474947);
+    border: 2px solid #9B9D9B;
+}
+
+div[data-rarity="exceptional"] {
+    background: radial-gradient(#36F817, #1B7C0B);
+    border: 2px solid #36F817;
+}
+
+div[data-rarity="modern"] {
+    background: radial-gradient(#1784F8, #0B427C);
+    border: 2px solid #1784F8;
+}
+
+div[data-rarity="advanced"] {
+    background: radial-gradient(#C517F8, #630B7C);
+    border: 2px solid #C517F8;
+}
+
+div[data-rarity="unique"] {
+    background: radial-gradient(#F8BF17, #7C600B);
+    border: 2px solid #F8BF17;
+}
+
+.computer-items > * {
+    margin: 0 0.5rem;
+}
+
+.slot {
+    min-width: 56px;
+    min-height: 56px;
+    padding: 0.125rem;
+    background: #282928;
+    border: 2px solid #191a19;
+
+    .item {
+        z-index: 2;
+    }
+}
+
+.inventory {
+    margin-top: 2rem;
+
+    .title {
+        color: white;
+        font-size: 1.5rem;
+    }
+}
+
+/*.inventory-items {
+    .item-row {
+        margin: 0.25rem 0;
+
+        .slot {
+            margin: 0 0.125rem;
+        }
+    }
+}*/
+
+.inventory-items {
+    display: grid;
+    grid-template-columns: repeat(12, 56px);
+    grid-gap: 4px;
+}
+
+.inventory-container {
+    max-width: 716px;
+    margin: 0 auto;
+
+    .title {
+        margin-bottom: 0.25rem;
+    }
+}
+
+@media (min-width: 576px) {
+    .inventory-items {
+        grid-template-columns: repeat(6, 56px);
+    }
+
+    .inventory-container {
+        max-width: 356px;
+    }
+}
+
+@media (min-width: 768px) {
+    .inventory-items {
+        grid-template-columns: repeat(9, 56px);
+    }
+
+    .inventory-container {
+        max-width: 536px;
+    }
+}
+
+@media (min-width: 992px) {
+    .inventory-items {
+        grid-template-columns: repeat(12, 56px);
+    }
+
+    .inventory-container {
+        max-width: 716px;
+    }
+}
+
+.dragging {
+    opacity: .5;
+}
+
+.dragging_over {
+    opacity: .5;
+}
+
+.item_details_hover {
     position: absolute;
-    bottom: 8px;
-    right: 15px;
+    top: 0;
+    left: 0;
+    background-color: #2e2d2d;
+    color: white;
+    z-index: 5;
+    padding: 16px;
+    border-radius: 6px;
+    word-wrap: break-word;
+    width: 250px;
+    max-width: 250px;
+
+    .item-name {
+        font-size: 1.2rem;
+        color: white;
+        margin-bottom: 0.75rem;
+        text-align: center;
+    }
 }
 
-.card-top {
+.computer-slot-empty {
+    background-size: 48px;
+    background-position: center;
+    background-repeat: no-repeat;
 
+    &[data-placeholder="1"] {
+        background-image: url("/storage/images/placeholders/motherboard_placeholder.png");
+    }
+
+    &[data-placeholder="2"] {
+        background-image: url("/storage/images/placeholders/cpu_placeholder.png");
+    }
+
+    &[data-placeholder="3"] {
+        background-image: url("/storage/images/placeholders/graphics_card_placeholder.png");
+    }
+
+    &[data-placeholder="4"] {
+        background-image: url("/storage/images/placeholders/hard_drive_placeholder.png");
+    }
+
+    &[data-placeholder="5"] {
+        background-image: url("/storage/images/placeholders/memory_placeholder.png");
+    }
+
+    &[data-placeholder="6"] {
+        background-image: url("/storage/images/placeholders/power_supply_placeholder.png");
+    }
+
+    &[data-placeholder="-1"] {
+        background-image: url("/storage/images/placeholders/locked.png");
+    }
+}
+
+.item-quality {
+    .progress {
+        height: 16px;
+        border: 1px black solid;
+        position: relative;
+        background-color: #1d1c1c;
+        width: 85%;
+    }
+
+    .item-quality-number {
+        margin: auto;
+    }
+}
+
+.quality-bar-low {
+    background-color: #e63434;
+}
+
+.quality-bar-medium {
+    background-color: #e6a834;
+}
+
+.quality-bar-high {
+    background-color: #3cf02b;
+}
+
+.quality-bar-perfect {
+    background-color: #2472e7;
+}
+
+.attributes-list {
+    margin-top: 1rem;
+
+    .title {
+        font-size: 1rem;
+    }
+
+    .attributes {
+
+    }
+}
+
+.card-bg-dark {
+    background-color: #212529 !important;
+    color: white;
+}
+
+.card-img-top img {
+    width: 150px;
+    height: 150px;
+}
+
+@media (max-width: 992px) {
+    .card-img-top img {
+        width: 90px;
+        height: 90px;
+    }
+}
+
+.balance-dropdown:hover > .dropdown-menu {
+    display: block;
+}
+
+.btn-success {
+    background-color: #2b9c5a;
+    border-color: #2b9c5a;
+
+    &:hover {
+        background-color: #278d52;
+    }
 }
