--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -128,27 +128,27 @@
     }
 }
 
-div[data-rarity="common"] {
+div[data-rarity="normal"] {
     background: radial-gradient(#9B9D9B, #474947);
     border: 2px solid #9B9D9B;
 }
 
-div[data-rarity="exceptional"] {
+div[data-rarity="plus"] {
     background: radial-gradient(#36F817, #1B7C0B);
     border: 2px solid #36F817;
 }
 
-div[data-rarity="modern"] {
+div[data-rarity="pro"] {
     background: radial-gradient(#1784F8, #0B427C);
     border: 2px solid #1784F8;
 }
 
-div[data-rarity="advanced"] {
+div[data-rarity="elite"] {
     background: radial-gradient(#C517F8, #630B7C);
     border: 2px solid #C517F8;
 }
 
-div[data-rarity="unique"] {
+div[data-rarity="master"] {
     background: radial-gradient(#F8BF17, #7C600B);
     border: 2px solid #F8BF17;
 }
