--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10723,6 +10723,22 @@ a.text-dark:focus {
   font-size: 1.25rem;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  min-width: 100vh;
+  overflow: hidden;
+}
+
+.navbar {
+  height: 6vh;
+}
+
+main {
+  height: 94vh;
+}
+
 .computers {
   margin-top: 50px;
 }
@@ -10798,10 +10814,6 @@ a.text-dark:focus {
 
 .form-check {
   padding: 0;
-}
-
-.item-name {
-  color: #4a5568;
 }
 
 .computer-stat-column {
@@ -11073,5 +11085,60 @@ div[data-rarity=master] {
 
 .btn-success:hover {
   background-color: #278d52;
+}
+
+.inventory-list {
+  overflow-y: scroll;
+}
+
+.item-list-container {
+  color: white;
+  padding: 0.25rem;
+}
+
+.item-list-container .item-img {
+  margin-right: 0.5rem;
+}
+
+.item-list-container .item-stats {
+  padding-left: 0.25rem;
+}
+
+@media (min-width: 1300px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
+@media (min-width: 1700px) {
+  .container {
+    max-width: 1600px;
+  }
+}
+
+/* width */
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #a7a7a7;
+  border-radius: 2px;
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+  background: #242424;
+  border-radius: 2px;
+}
+
+/* Handle on hover */
+
+::-webkit-scrollbar-thumb:hover {
+  background: #3f3f3f;
 }
 
