--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10723,22 +10723,6 @@ a.text-dark:focus {
   font-size: 1.25rem;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
-  min-width: 100vh;
-  overflow: hidden;
-}
-
-.navbar {
-  height: 6vh;
-}
-
-main {
-  height: 94vh;
-}
-
 .computers {
   margin-top: 50px;
 }
@@ -11093,7 +11077,7 @@ div[data-rarity=master] {
 
 .item-list-container {
   color: white;
-  padding: 0.25rem;
+  padding: 0.25rem 0.75rem;
 }
 
 .item-list-container .item-img {
@@ -11102,18 +11086,6 @@ div[data-rarity=master] {
 
 .item-list-container .item-stats {
   padding-left: 0.25rem;
-}
-
-@media (min-width: 1300px) {
-  .container {
-    max-width: 1200px;
-  }
-}
-
-@media (min-width: 1700px) {
-  .container {
-    max-width: 1600px;
-  }
 }
 
 /* width */
