--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -409,6 +409,15 @@ div[data-rarity="master"] {
     }
 }
 
+.oc-title{
+    font-size: 2rem;
+    color: white;
+}
+
+.oc-text{
+    color: white;
+    font-size: 1rem;
+}
 
 /* width */
 ::-webkit-scrollbar {
